2005-01-18  Sureshkumar T  <tsureshkumar@novell.com>

	* OdbcDataReader.cs: GetOrdinal need not check for
	currentRow. Return -1 if column name is not found.

	fixes bug #71261. Thanks to patch given by "Appasamy T"
	<appasamy@rediffmail.com>.

2005-01-13  Sureshkumar T  <tsureshkumar@novell.com>

	* OdbcDataReader.cs: Implement NextResultSet for multiple result
	set queries. 
	
	* OdbcDataReader.cs: build column schema once creating reader and
	then for each Next result set. Thanks to
	sebastien.robitaille@croesus.com (Sebastien Robitaille) for
	pointing out this optimization (bugzilla #70530).

	* libodbc.cs: Added library calls SQLFreeStmt and SQLMoreResults
	for mutiple resultsets.

2005-01-10  Sureshkumar T  <tsureshkumar@novell.com>

	* OdbcDataReader.cs: Connection has to be closed only after
	Statement handle is freed. fixes bug #70048.

2005-01-07  Sureshkumar T  <tsureshkumar@novell.com>

	* OdbcDataReader.cs: Pass OdbcCType.SignedBigInt for accessing big
	int columns.

	* OdbcType.cs: Added a new enum for Odbc C DataTypes. This should
	essentially be passed to drivers, since the public OdbcType types
	differs from types expected in drivers in some cases.

	* libodbc.cs : Added a ODBC method which takes OdbcCType
	enumeration for SQLGetData for BigInt fields.

	fixes bug #65342.

2004-12-28  Duncan Mak  <duncan@ximian.com>

	* libodbc.cs: Change all the DllImport attributes to point to
	"odbc32.dll" instead of "odbc32", because /etc/mono/config lists
	"odbc32.dll" (all other entries in the file have the .dll suffix
	as well, for consistency's sake, let's rename it here.)

	This fixes #70727.
	
2004-12-03  Sureshkumar T  <tsureshkumar@novell.com>

	* OdbcParameter.cs: Fixed a null reference exception when a
	parameter is created and its value is not set. #68750.

2004-11-26  Sureshkumar T  <tsureshkumar@novell.com>

	* OdbcParameter.cs: Fixed Parameter Size property as well as
	insufficient buffer errors. bug #68749.
